main.css
@import 'libraries/handsontable.full.min.css';
@import 'libraries/bootstrap.min.css';
@import 'libraries/chosen.css';
@import 'libraries/jquery-ui.min.css';

html, body {
    width: 100%;
    height: 100%;
    margin: 0;
    /* Prevents track or mouse scroll gestures from triggering page navigation in chrome off of displayed page. */
    overscroll-behavior: contain;    
}

#loading-screen {
	display: none;
	background-color: rgba(108, 117, 125, 0.2);
	z-index: 1000;
}

#unmapped-headers-list {
	max-height: 50vh;
	overflow-y: auto;
}

/* Toolbar */
#header-row {
    visibility: hidden;
}
.dropdown-item:hover {
    cursor: pointer;
}

#open-file-input {
    display: none;
}

#no-error-button {
	background-color: green;
	cursor: default;
}
.ui-autocomplete {
	max-height: 50vh;
	overflow-y: auto;
	overflow-x: hidden;
    z-index: 5000;
}

/* Specify headers modal */
#specify-headers-comparison-row {
	overflow-x: auto;
}
#expected-headers-div, #actual-headers-div {
	white-space: pre;
}
#specify-headers-err-msg {
	display: none;
}

/* Getting started modal */
.carousel-control-prev-icon {
    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' viewBox='0 0 8 8'%3e%3cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3e%3c/svg%3e");
}
.carousel-control-next-icon {
    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' viewBox='0 0 8 8'%3e%3cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3e%3c/svg%3e");
}
.carousel-indicators li {
	background-color: black;
}
.carousel-caption {
	color: black;
	text-align: left;
    position: relative;
    left: 0;
    top: 0;
}

/* Grid */
#grid {
	width: 100%;
	overflow: hidden;
}
#grid .secondary-header-cell:hover {
	cursor: pointer;
}
#grid td.invalid-cell {
	background-color: #ffcccb !important;
}
#grid td.empty-invalid-cell {
	background-color: #ff91a4 !important;
}
#grid .htAutocompleteArrow {
	color: gray;
}
#grid th {
	text-align: left;
}
#grid th.required {
	background-color:yellow;
}
#grid th.recommended {
	background-color:plum;
}

/* Autocomplete */
.listbox {
    white-space: pre !important;
}
.handsontable.listbox td {
	border-radius:3px;
	border:1px solid silver;
	background-color: #DDD;
}
.handsontable.listbox td:hover {
	background-color: lightblue !important;
}
.handsontable.listbox td.current.highlight {
	background-color: lightblue !important;
}

/* Fixed col */
#grid th.overlayEdge {
	border-right: medium solid gray;
}
#grid table.htCore > tbody > tr td:nth-child(2) {
	border-right: medium solid gray;
}
#add-rows-input {max-width:5rem}

/* Below grid */
#footer-row {
    visibility: hidden;
}

